Kleinere Veränderungen; Klarstellung bei Vorstandsbeschlüssen

--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -195,7 +195,7 @@ Eine Änderung des Vereinszwecks darf nur innerhalb des von \ref{Zweck}
 gegebenen Rahmens erfolgen.
 
 Bei der Auf\/lösung des Vereins oder beim Wegfall des steuerbegünstigten
-Zwecks fällt das Vereinsvermögen an eine juristische Person des öffentlichen
+Zwecks fällt das Vereinsvermögen an eine juristische Person des öf\-fent\-lichen
 Rechts oder eine andere steuerbegünstigete Körperschaft zwecks Verwendung
 für die Förderung der Bildung im Sinne dieser Satzung.
 
@@ -255,7 +255,7 @@ Die Mitgliedschaft endet durch
   über den Eingang der Kündigung beim Vorstand führt der Absender.
   \item den Tod von natürlichen Personen.
   \item die Auf\/lösung und Erlöschung von juristischen Personen, Handelsgesellschaften,
-  nicht rechtsfähigen Vereinen sowie Anstalten und Körperschaften des öffentlichen
+  nicht rechtsfähigen Vereinen sowie Anstalten und Körperschaften des öf\-fent\-lichen
   Rechts.
   \item Ausschluss.
 \end{compactitem}
@@ -283,7 +283,7 @@ Verpflichtung zur Zahlung fälliger Beiträge auf.
 \SubParagraph{title=Ausschluss eines Mitglieds}
 
 Ein Mitglied kann durch Beschluss des Vorstandes ausgeschlossen werden, wenn es
-das Ansehen des Vereins schädigt, die Satzung des Vereins i.d.g.F. vorsätzlich
+das Ansehen des Vereins schädigt, die Satzung des Vereins vorsätzlich
 verletzt oder wenn ein sonstiger wichtiger Grund vorliegt. Der Vorstand muß
 dem auszuschließenden Mitglied den Beschluss in Textform unter Angabe von Gründen
 mitteilen.
@@ -353,7 +353,7 @@ Initiativanträgen entscheidet die Mitgliederversammlung.
 \SubParagraph{title=Versammlungsleitung}
 
 Die Mitgliederversammlung wird vom Vorstandsvorsitzenden, bei dessen
-Verhinderung von einem stellvertretenden Vorsitzenden, bei dessen Verhinderung
+Verhinderung von dem/der stellvertretenden Vorsitzenden, bei dessen/deren Verhinderung
 von einem anderen Mitglied des Vorstandes geleitet. Ist kein Vorstandsmitglied
 anwesend, bestimmt die Mitgliederversammlung den Versammlungsleiter.
 
@@ -405,9 +405,9 @@ Kandidat/-in gewählt wurde, ggf.\ auf einer außerordentlichen
 Mitgliederversammlung.
 
 Bei Stimmengleichheit entscheidet die Stimme des/der Vorsitzenden bzw.\ bei
-dessen Verhinderung die des/der stellvertretenden Vorsitzenden. Bei
-Stimmgleichheit während Vorstandswahlen entscheidet der Versammlungsleiter
-durch Ziehung eines Loses.
+dessen/deren Verhinderung die Stimmen des/der stellvertretenden Vorsitzenden. Bei
+trotzdem gegebener Stimmgleichheit zweier Kandidaten während Vorstandswahlen
+entscheidet der Versammlungsleiter durch Ziehung eines Loses.
 
 \SubParagraph{title=Niederschriften}
 
@@ -430,7 +430,7 @@ unterzeichnen ist und folgende Informationen enhalten muß:
 Das Protokoll ist binnen zwei Wochen vereinsöffentlich zur Verfügung zu
 stellen.
 
-\SubParagraph{title=Beschlüsse außerhalb ordentlicher Versammlungen}
+\SubParagraph{title=Beschlüsse außerhalb ordentlicher Versammlungen}\label{AusserordentlicheBeschluesse}
 
 Die Mitgliederversammlung kann außerhalb von Sitzungen Beschlüsse in
 elektronischer Form (§~126a BGB) fassen, wenn alle Mitglieder mit einer
@@ -491,7 +491,7 @@ Vorsitzenden und dem/der stellvertretenden Vorsitzenden.
 
 Der/die Vorsitzende des Vorstands und sein/-e Stellvertreter/-in können den
 Verein gerichtlich und außergerichtlich einzeln vertreten. Für Rechtsgeschäfte
-mit einem finanziellen Volumen von über \EUR{2.000}, sowie der Einstellung und
+mit einem finanziellen Volumen von über \EUR{5.000}, sowie der Einstellung und
 Entlassung von Angestellten und der Aufnahme von Krediten ist nur eine
 gemeinschaftliche Vertretung zulässig.
 
@@ -505,12 +505,14 @@ unterzeichnen.
 
 Der Vorstand trifft sich zu regelmäßigen Sitzungen, wenn die Geschäfte es
 notwendig machen oder zwei Drittel der Vorstandsmitglieder die Einberufung
-einer Vorstandssitzung fordern. Vereinsfremde Personen können zu
-Vorstandssitzungen zugelassen werden.
+einer Vorstandssitzung fordern. Vereinsfremde Personen können zur Teilnahme
+an Vorstandssitzungen ohne Stimmrecht zugelassen werden.
 
-Vorstandsbeschlüsse sind nach angemessener Benachrichtigung aller Mitglieder
-des Vorstandes auch ohne Vorstandssitzung zulässig, insofern kein Mitglied
-des Vorstands ausdrücklich innerhalb von 5 Tagen widerspricht.
+Hinsichtlich etwaiger Vorstandsbeschlüsse außerhalb ordentlicher Vorstandssitzungen
+gilt \refParagraph{AusserordentlicheBeschluesse} sinngemäß. Die Einspruchsfrist
+beträgt bei Vorstandsbeschlüssen außerhalb ordentlicher Vorstandssitzungen jedoch
+abweichend von \refParagraph{AusserordentlicheBeschluesse}~\refParS{eBeschluss} für
+Vorstandsmitglieder fünf Tage.
 
 Sämtliche Vorstandssitzungen sowie sämtliche Beschlussfassungen durch
 den Vorstand sind vereinsöffentlich.
