--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -39,7 +39,7 @@
 
 \selectlanguage{german}
 
-\title{Entwurf einer Satzung des Vereins "`\VereinsName\ [e.V.]"'}
+\title{Entwurf der Satzung des Vereins "`\VereinsName\ [e.V.]"'}
 \date{}
 \author{}
 \def\fassungsdatum{26.\ November 2014}
