Änderungen zur Satzung für die heutige Sitzung

--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -39,10 +39,10 @@
 
 \selectlanguage{german}
 
-\title{Entwurf der Satzung des Vereins "`\VereinsName\ [e.V.]"'}
+\title{Satzung des Vereins "`\VereinsName\ [e.V.]"'}
 \date{}
 \author{}
-\def\fassungsdatum{26.\ November 2014}
+\def\fassungsdatum{17.\ Dezember 2014}
 
 \begin{center}
   \LARGE \thetitle
@@ -56,7 +56,7 @@
 \clearscrheadfoot
 \ofoot{\footnotesize Seite \thepage\ von \pageref{TotPages}}
 
-{\footnotesize Diese Vereinssatzung wurde am ??.\ ??.\ 2014 in der Versammlung
+{\footnotesize Diese Vereinssatzung wurde am 17.\ 12.\ 2014 in der Versammlung
   zur Gründung des Vereins "`\VereinsName\ [e.V.]"\ offiziell errichtet. Sie
   umfasst \pageref{TotPages} numerierte Seiten, inklusive dieser.}
 
@@ -82,7 +82,7 @@ zum Austausch über verschiedene Themen, die mit OpenStack zu tun haben.
 Neben dem größten Event dieser Art, dem halbjährlich stattfindenden OpenStack
 Summit, organisieren Mitglieder der OpenStack-Gemeinschaft regelmäßig auch
 regionale Events überall in der Welt. Die lokalen Meetups bieten vor Ort
-die Möglichkeit, sich über aktuellen Entwicklungen rund um OpenStack zu
+die Möglichkeit, sich über aktuelle Entwicklungen rund um OpenStack zu
 informieren, eigene Entwicklungen und Produkte vorzustellen und mit anderen
 OpenStack-Begeisterten Wissen auszutauschen. Für den deutschen Sprachraum
 (DACH) haben bisher außerdem zwei überregionale Events stattgefunden, die
@@ -94,17 +94,17 @@ entfällt allerdings im Jahre 2015, weil der LinuxTag nicht wie gewohnt
 stattfindet. Viele Mitglieder der deutschen OpenStack-Gemeinschaft sind
 sich jedoch darin einig, dass es auch 2015 wieder eine entsprechende
 Veranstaltung in der DACH-Region rund um OpenStack geben sollte. Sie
-gründen deshalb den \VereinsName\ e.V., der als juristische Person auf der
+gründen deshalb den \VereinsName\ [e.V.], der als juristische Person auf der
 einen Seite als Organisator eines solchen Events (und ggf. weiterer
 lokaler Events) mit allen Rechten und Pflichten auftreten kann, der aber
 andererseits auch in der Lage ist, Spenden für die Durchführung eben jener
 Veranstaltungen zu sammeln.
 
-Als Verein ist \VereinsName\ e.V. auch an demokratische Prinzipien gebunden
+Als Verein ist \VereinsName\ [e.V.] auch an demokratische Prinzipien gebunden
 und unabhängig von einzelnen Unternehmen. Das stellt sicher, dass etwaige
 Veranstaltungen wie der "`OpenStack DACH Tag"' eine offene Plattform für alle
 interessierten Unternehmen und Organisationen bleiben, statt zur "`Hausmesse"'
-einzelner Firmen zu werden. Die Gründungsmitglieder von \VereinsName\ e.V.
+einzelner Firmen zu werden. Die Gründungsmitglieder von \VereinsName\ [e.V.]
 halten ausdrücklich fest, dass dies für sie eine der Hauptmotivationen für die
 Gründung des Vereins darstellt.
 
@@ -159,7 +159,7 @@ Mehrwert auch über die Veranstaltungen hinaus zu gewährleisten.
 \Paragraph{title=Gemeinnützigkeit}\label{Gemeinnuetzigkeit}
 
 Der Verein verfolgt ausschließlich und unmittelbar gemeinnützige Zwecke im
-Sinne des Abschnitts "`Steuerbegünstigte Zwecke"' der Abgabenordnung.
+Sinne des Abschnitts "`Steuerbegünstigte Zwecke"' der Abgabenordnung (AO).
 
 Der Verein ist selbstlos tätig; er ist konfessionell und parteipolitisch
 neutral. Er verfolgt nicht in erster Linie eigenwirtschaftliche Zwecke.
@@ -238,7 +238,7 @@ Mitgliederversammlung festgelegten Beitragsordnung festgesetzten Beiträge zu
 zahlen.
 
 Jedes einzelne Mitglied hat Sorge dafür zu tragen, dass dem Vorstand zu jeder
-Zeit eine zustellungsfähige Adresse des Mitglieds bekannt ist.
+Zeit eine zustellungsfähige Post- und E-Mail-Adresse des Mitglieds bekannt ist.
 
 \SubParagraph{title=Beendigung der Mitgliedschaft}
 
@@ -253,7 +253,7 @@ Die Mitgliedschaft endet durch
   \item die Auf\/lösung und Erlöschung von juristischen Personen, Handelsgesellschaften,
   nicht rechtsfähigen Vereinen sowie Anstalten und Körperschaften des öf\-fent\-lichen
   Rechts.
-  \item Ausschluss.
+  \item Ausschluss gem. \refParagraph{Ausschluss}~\refParS{Ausschluss}.
 \end{compactitem}
 
 Die Beitragspflicht für das laufende Geschäftsjahr bleibt hiervon unberührt.
@@ -273,16 +273,16 @@ Diese Regelung gilt sinngemäß auch für neue Vereinsmitglieder, wobei die
 dreimonatige Frist hier mit dem Tag der Annahme der Beitrittserklärung
 durch den Vorstand beginnt.
 
-Erlischt die Mitgliedschaft eines Mitglieds, so hebt dies nicht die
-Verpflichtung zur Zahlung fälliger Beiträge auf.
+Erlischt die Mitgliedschaft, so hebt dies nicht die Verpflichtung zur Zahlung 
+fälliger Beiträge auf.
 
-\SubParagraph{title=Ausschluss eines Mitglieds}
+\SubParagraph{title=Ausschluss eines Mitglieds}\label{Ausschluss}
 
 Ein Mitglied kann durch Beschluss des Vorstandes ausgeschlossen werden, wenn es
 das Ansehen des Vereins schädigt, die Satzung des Vereins vorsätzlich
 verletzt oder wenn ein sonstiger wichtiger Grund vorliegt. Der Vorstand muß
 dem auszuschließenden Mitglied den Beschluss in Textform unter Angabe von Gründen
-mitteilen.
+mitteilen.\label{Ausschluss}
 
 Gegen seinen Ausschluss kann das Mitglied mit aufschiebender Wirkung die nächste
 Mitgliederversammlung anrufen, die eine endgültige Entscheidung trifft.
@@ -325,7 +325,7 @@ unterliegen:
   \item die Auf\/lösung des Vereins.
 \end{compactenum}
 
-Die ordentliche Mitgliederversammlung findet jedes Jahr statt. Außerordentliche
+Eine ordentliche Mitgliederversammlung findet jedes Jahr statt. Außerordentliche
 Mitgliederversammlungen werden auf Beschluss des Vorstandes abgehalten, wenn die
 Interessen des Vereins dies erfordern, oder wenn mindestens ein Zehntel der
 Mitglieder dies unter Angabe des Zwecks in Textform beantragt.
@@ -372,9 +372,14 @@ der Beschluss mit Dreiviertelmehrheit gefasst wird.\label{MV-Aufloesung}
 Jedes aktive Mitglied hat eine Stimme. Stimmübertragungen sind nicht
 zulässig.\label{Stimmrechte}
 
-Wenn ein Drittel der stimmberechtigten Mitglieder ein anderes
-Wahlverfahren verlangt, bestimmt der Versammlungsleiter die Art der
-Abstimmung.
+Das Vorschlagsrecht für das anzuwendende Wahlverfahren obliegt jeweils
+dem/der Versammlungsleiter/in. 
+
+Auf Verlangen der Mehrheit der stimmberechtigten Mitglieder hat der 
+Versammlungsleiter ein anderes Wahlverfahren anzuwenden.
+
+Unabhängig davon ist auf Verlangen auch nur eines einzelnen Mitglieds
+die Abstimmung geheim durchzuführen.
 
 Für die Dauer der Durchführung von Vorstandswahlen wählt die
 Mitgliederversammlung einen Wahlausschuß.
@@ -385,7 +390,7 @@ zur Wahl zugelassen zu werden.
 
 Die Mitglieder des Vorstandes werden einzeln gewählt, zuerst der/die
 Vorstandsvorsitzende, dann der/die stellvertretende Vorsitzende und zuletzt
-die übrigen Mitglieder.
+nacheinander die übrigen Mitglieder.
 
 Es gilt der/die Kandidat/-in als gewählt, der mehr als die Hälfte der
 abgegebenen gültigen Stimmen erhalten hat und die Wahl annimmt. Ist die
@@ -431,7 +436,7 @@ stellen.
 Die Mitgliederversammlung kann außerhalb von Sitzungen Beschlüsse in
 elektronischer Form (§~126a BGB) fassen, wenn alle Mitglieder mit einer
 Vorlaufzeit von zwei Wochen per E-Mail davon in Kenntnis gesetzt
-sind.\label{eBeschluss}
+sind und kein Mitglied Einspruch gegen diese Art des Vorgehens erhebt.\label{eBeschluss}
 
 Bekanntzugeben ist der Beschlussvorschlag mit Erläuterungen sowie der
 Bestimmung, in welcher Form und Frist die Stimmen abzugeben sind. Nach Ablauf
@@ -482,14 +487,25 @@ Vorstand ist beschlußfähig, wenn mindestens drei Mitglieder anwesend sind.
 
 \SubParagraph{title=Vertretung}
 
-Der vertretungsberechtigte Vorstand im Sinne des § 26 BGB besteht aus dem/der
-Vorsitzenden und dem/der stellvertretenden Vorsitzenden.
+Der vertretungsberechtigte Vorstand im Sinne des § 26 BGB besteht aus 
+\begin{compactenum}[\hspace{2em}1.]
+  \item dem/der Vorsitzenden,
+  \item dem/der stellvertretenden Vorsitzenden,
+  \item dem/der Schriftführer/-in,
+  \item dem/der Kassenwart/-wärtin,
+\end{compactenum}
 
 Der/die Vorsitzende des Vorstands und sein/-e Stellvertreter/-in können den
-Verein gerichtlich und außergerichtlich einzeln vertreten. Für Rechtsgeschäfte
-mit einem finanziellen Volumen von über \EUR{5.000}, sowie der Einstellung und
-Entlassung von Angestellten und der Aufnahme von Krediten ist nur eine
-gemeinschaftliche Vertretung zulässig.
+Verein gerichtlich und außergerichtlich einzeln vertreten. Der/die Schriftführer/-in
+sowie der/die Kassenwart/-wärtin können den Verein gerichtlich und
+außergerichtlich gemeinschaftlich vertreten. 
+
+Für Rechtsgeschäfte mit einem 
+finanziellen Volumen von über \EUR{5.000}, sowie der Einstellung und Entlassung von 
+Angestellten und der Aufnahme von Krediten ist nur eine gemeinschaftliche Vertretung 
+durch mindestens zwei vertretungsberechtigte Mitglieder des Vorstandes zulässig, wobei 
+eines der beiden vertretenden Vorstandsmitglieder der/die Vorsitzende oder der/die 
+stellvertretende Vorsitzende sein muss.
 
 Der/die Kassenwart/-wärtin verwaltet die Vereinskasse und führt Buch über die
 Einnahmen und Ausgaben des Vereins. Gegenüber Banken erhält er/sie hierfür
@@ -544,6 +560,17 @@ Versicherungen auf Kosten des Vereins abzuschließen:
   \item Dienstreiserahmenversicherung.
 \end{compactenum}
 
+\Paragraph{title=Rechnungsprüfer}
+
+Die Mitgliederversammlung wählt zwei Mitglieder als Rechnungsprüfer, sowie
+zwei Stellvertreter, die allesamt nicht dem Vorstand angehören dürfen.
+
+Die Amtsdauer beträgt zwei Jahre, die Wiederwahl ist zulässig.
+
+Die Rechnungsprüfer prüfen die Jahresrechnung, erstellen einen schriftlichen
+Bericht, berichten der Mitgliederversammlung und beantragen die Entlastung
+des Vorstands.
+
 \Paragraph{title=Die Ressorts}
 
 Zu besonderen Themen und zur Erledigung spezieller Aufgaben richtet der
@@ -596,7 +623,7 @@ Fahr\-läss\-ig\-keit.
 \vspace{3em}
 
 \rule{6cm}{0.4pt} \\
-\noindent Martin Gerhard Loschwitz \\
+\noindent \\
 \vspace{2em}
 
 \rule{6cm}{0.4pt} \\
