Erlaube Stimmübertragungen an andere Mitglieder

--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -369,8 +369,9 @@ der Beschluss mit Dreiviertelmehrheit gefasst wird.\label{MV-Aufloesung}
 
 \SubParagraph{title=Abstimmungen und Wahlen}
 
-Jedes aktive Mitglied hat eine Stimme. Stimmübertragungen sind nicht
-zulässig.\label{Stimmrechte}
+Jedes aktive Mitglied hat eine Stimme. Stimmübertragungen durch
+Mitglieder an andere Vereinsmitglieder sind per schriftlicher Vollmacht
+möglich.\label{Stimmrechte}
 
 Das Vorschlagsrecht für das anzuwendende Wahlverfahren obliegt jeweils
 dem/der Versammlungsleiter/in. 
