Aenderungen zur Erreichung der Gemeinnuetzigkeit, neuer Name

--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -39,10 +39,10 @@
 
 \selectlanguage{german}
 
-\title{Satzung des Vereins "`\VereinsName\ [e.V.]"'}
+\title{Entwurf der Satzung des Vereins "`\VereinsName\ e.V."'}
 \date{}
 \author{}
-\def\fassungsdatum{17.\ Dezember 2014}
+\def\fassungsdatum{16.\ September 2015}
 
 \begin{center}
   \LARGE \thetitle
@@ -56,8 +56,8 @@
 \clearscrheadfoot
 \ofoot{\footnotesize Seite \thepage\ von \pageref{TotPages}}
 
-{\footnotesize Diese Vereinssatzung wurde am 17.\ 12.\ 2014 in der Versammlung
-  zur Gründung des Vereins "`\VereinsName\ [e.V.]"\ offiziell errichtet. Sie
+{\footnotesize Diese Vereinssatzung wurde am ??.\ ??.\ 2015 in der
+  Mitgliederversammlung des Vereins "`\VereinsName\ e.V."\ offiziell errichtet. Sie
   umfasst \pageref{TotPages} numerierte Seiten, inklusive dieser.}
 
 \bigskip
@@ -94,17 +94,17 @@ entfällt allerdings im Jahre 2015, weil der LinuxTag nicht wie gewohnt
 stattfindet. Viele Mitglieder der deutschen OpenStack-Gemeinschaft sind
 sich jedoch darin einig, dass es auch 2015 wieder eine entsprechende
 Veranstaltung in der DACH-Region rund um OpenStack geben sollte. Sie
-gründen deshalb den \VereinsName\ [e.V.], der als juristische Person auf der
+gründen deshalb den \VereinsName\ e.V., der als juristische Person auf der
 einen Seite als Organisator eines solchen Events (und ggf. weiterer
 lokaler Events) mit allen Rechten und Pflichten auftreten kann, der aber
 andererseits auch in der Lage ist, Spenden für die Durchführung eben jener
 Veranstaltungen zu sammeln.
 
-Als Verein ist \VereinsName\ [e.V.] auch an demokratische Prinzipien gebunden
+Als Verein ist \VereinsName\ e.V. auch an demokratische Prinzipien gebunden
 und unabhängig von einzelnen Unternehmen. Das stellt sicher, dass etwaige
 Veranstaltungen wie der "`OpenStack DACH Tag"' eine offene Plattform für alle
 interessierten Unternehmen und Organisationen bleiben, statt zur "`Hausmesse"'
-einzelner Firmen zu werden. Die Gründungsmitglieder von \VereinsName\ [e.V.]
+einzelner Firmen zu werden. Die Gründungsmitglieder von \VereinsName\ e.V.
 halten ausdrücklich fest, dass dies für sie eine der Hauptmotivationen für die
 Gründung des Vereins darstellt.
 
@@ -121,9 +121,7 @@ worden ist.
 
 \Paragraph{title={Name, Sitz, Gerichtsstand und Geschäftsjahr}}
 
-Der Verein führt den Namen "`\VereinsName"'; nach der beabsichtigten
-Eintragung in das Vereinsregister mit dem Zusatz "`e.V."' (fortan: der
-Verein).
+Der Verein führt den Namen "`\VereinsName\ e.V."' (fortan: der Verein).
 
 Der Verein hat seinen Sitz in Berlin.
 
@@ -137,24 +135,13 @@ Vereins bis zum Jahresende bildet ein Rumpfgeschäftsjahr.
 \parnumberfalse
 
 \label{Zweck}
-Zweck des Vereins ist die Förderung von Volksbildung. Insbesondere geht es
-dem Verein darum, durch die Unterstützung entsprechender Veranstaltungen
-bei der Vermittlung von Wissen rund um das Thema OpenStack aktiv zu sein.
+Zweck der Körperschaft ist die Förderung von Volksbildung. Der Satzungszweck wird insbesondere verwirklicht durch
 
-Der Zweck des Vereins wird insbesondere durch die Organisation von öffentlich
-zu\-gäng\-li\-chen Veranstaltungen verwirklicht, die OpenStack selbst oder
-mit OpenStack in Verbindung stehende Projekte der Allgemeinheit näher
-bringen und somit der Volksbildung dienen, wie z.B.
-
-\begin{compactitem}
-  \item Konferenzen,
-  \item Vorträge und Workshops,
-  \item Lehrgänge und andere Weiterbildungsangebote.
-\end{compactitem}
-
-Wenn technisch möglich stellt der Verein Video-Materialien seiner Veranstaltungen
-öf\-fent\-lich und kostenfrei zur Verfügung, um den wissenschaftlichen wie kulturellen
-Mehrwert auch über die Veranstaltungen hinaus zu gewährleisten.
+\begin{enumerate}
+  \item die Durchführung von wissenschaftlichen Veranstaltungen, Bildungsveranstaltungen und Kursen zum Thema Cloud Computing und OpenStack,
+  \item die Veröffentlichung von Informationen zu OpenStack und verwandten Themen
+  \item den Betrieb von Internet-Foren für den wissenschaftlichen Austausch und die Verbreitung des Wissens um OpenStack.
+\end{enumerate}
 
 \Paragraph{title=Gemeinnützigkeit}\label{Gemeinnuetzigkeit}
 
@@ -173,11 +160,11 @@ Dem Verein stehen folgende Mittel zur Verfügung:
   \item seine Erträge aus Ergebnissen der Vereinsarbeit.
 \end{compactitem}
 
-Die Mittel des Vereins werden ausschließlich und unmittelbar zu den
-satzungsgemäßen Zwecken verwendet. Die Mitglieder erhalten als solche
-keinerlei Zuwendung aus Mitteln des Vereins. Zweckmäßiger Spesenersatz stellt
-keine Zuwendung dar. Niemand darf durch Ausgaben, die dem Zwecke des Vereins
-fremd sind, oder durch unverhältnismäßig hohe Vergütungen, begünstigt werden.
+Mittel der Körperschaft dürfen nur für die satzungsmäßigen Zwecke
+verwendet werden. Die Mitglieder erhalten keine Zuwendungen aus Mitteln
+der Körperschaft. Es darf keine Person durch Ausgaben, die dem Zweck der
+Körperschaft fremd sind, oder durch unverhältnismäßig hohe Vergütungen
+begünstigt werden.
 
 Um den Erkenntnisgewinn bei den Teilnehmern von Veranstaltungen zu erhöhen,
 lädt der Verein namhafte, verdienstvolle und bedürftige Teilnehmer ein und
